--- a/src/Bundle/JoseFramework/Resources/views/data_collector/template.html.twig
+++ b/src/Bundle/JoseFramework/Resources/views/data_collector/template.html.twig
@@ -44,312 +44,10 @@
 {% block panel %}
     {% import _self as helper %}
     <div class="sf-tabs">
-        <div class="tab">
-            <h3 class="tab-title">Keys and Key Sets</h3>
-            <div class="tab-content">
-                <h4>Keys</h4>
-                <table>
-                    <thead>
-                    <tr>
-                        <th>Service ID</th>
-                        <th>Key type</th>
-                        <th>Analyze Result</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    {% for id, data in collector.get('key', 'getJWKs') %}
-                        <tr>
-                            <td>{{ id }}</td>
-                            <td>{{ data.jwk.get('kty') }}</td>
-                            <td>
-                                {% if data.analyze.count() == 0 %}
-                                    No message. All good!
-                                {% else %}
-                                    <ul>
-                                        {% for message in data.analyze %}
-                                            <li><span class="severity-{{ message.getSeverity() }}">{{ message.getMessage() }} ({{ message.getSeverity() }})</span></li>
-                                        {% endfor %}
-                                    </ul>
-                                {% endif %}
-                            </td>
-                        </tr>
-                    {% endfor %}
-                    </tbody>
-                </table>
-                <h4>Key Sets</h4>
-                <table>
-                    <thead>
-                    <tr>
-                        <th>Service ID</th>
-                        <th>Number of keys</th>
-                        <th>Analyze Result</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    {% for id, data in collector.get('algorithm', 'getJWKSets') %}
-                        <tr>
-                            <td>{{ id }}</td>
-                            <td>{{ data.jwkset.count() }}</td>
-                            <td>
-                                {% for kid, messages in data.analyze %}
-                                    Analyze of key at index/key ID "{{ kid }}":<br>
-                                    {% if messages.count() == 0 %}
-                                        No message. All good!
-                                    {% else %}
-                                        <ul>
-                                            {% for message in messages %}
-                                                <li><span class="severity-{{ message.getSeverity() }}">{{ message.getMessage() }} ({{ message.getSeverity() }})</span></li>
-                                            {% endfor %}
-                                        </ul>
-                                    {% endif %}
-                                {% endfor %}
-                            </td>
-                        </tr>
-                    {% endfor %}
-                    </tbody>
-                </table>
-            </div>
-        </div>
-        <div class="tab">
-            <h3 class="tab-title">JWS Services</h3>
-            <div class="tab-content">
-                <h4>JWS Builders</h4>
-                <table>
-                    <thead>
-                    <tr>
-                        <th>Service ID</th>
-                        <th>Algorithms</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    {% for id, data in collector.get('jws', 'getJWSBuilders') %}
-                        <tr>
-                            <td>{{ id }}</td>
-                            <td>
-                                <ul>
-                                    {% for algorithm in data.signature_algorithms %}
-                                        <li><span{% if algorithm == 'none' %} class="severity-low"{% endif %}>{{ algorithm }}</span></li>
-                                    {% endfor %}
-                                </ul>
-                            </td>
-                        </tr>
-                    {% endfor %}
-                    </tbody>
-                </table>
-                <h4>JWS Verifiers</h4>
-                <table>
-                    <thead>
-                    <tr>
-                        <th>Service ID</th>
-                        <th>Algorithms</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    {% for id, data in collector.get('jws', 'getJWSVerifiers') %}
-                        <tr>
-                            <td>{{ id }}</td>
-                            <td>
-                                <ul>
-                                    {% for algorithm in data.signature_algorithms %}
-                                        <li><span{% if algorithm == 'none' %} class="severity-low"{% endif %}>{{ algorithm }}</span></li>
-                                    {% endfor %}
-                                </ul>
-                            </td>
-                        </tr>
-                    {% endfor %}
-                    </tbody>
-                </table>
-                {% if signatureAlgorithms['Signature'] is defined %}
-                    <h4>Available Signature Algorithms</h4>
-                    {% set signatureAlgorithms = collector.get('algorithm', 'getAlgorithmDetails') %}
-                    <ul>
-                        {% for alias, alg in signatureAlgorithms['Signature'] %}
-                            <li><span{% if alg.name == 'none' %} class="severity-low"{% endif %}>{{ alg.name }} (alias: <i>{{ alias }})</i>{% if alg.name == 'none' %}. This algorithm is not secured. Please use with caution{% endif %}</span></li>
-                        {% endfor %}
-                    </ul>
-                    <h4>Serialization Modes</h4>
-                    <ul>
-                        {% for alias, name in collector.get('jws', 'getJWSSerializationDetails') %}
-                            <li>{{ name }} (alias: <i>{{ alias }})</i></li>
-                        {% endfor %}
-                    </ul>
-                {% else %}
-                    The is no signature algorithm. Did you installed "web-token/jwt-signature-bundle"?
-                {% endif %}
-            </div>
-        </div>
-        <div class="tab">
-            <h3 class="tab-title">JWE Services</h3>
-            <div class="tab-content">
-                <h4>JWE Builders</h4>
-                <table>
-                    <thead>
-                    <tr>
-                        <th>Service ID</th>
-                        <th>Key Encryption Algorithms</th>
-                        <th>Content Encryption Algorithms</th>
-                        <th>Compression Methods</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    {% for id, data in collector.get('jwe', 'getJWEBuilders') %}
-                        <tr>
-                            <td>{{ id }}</td>
-                            <td>
-                                <ul>
-                                    {% for algorithm in data.key_encryption_algorithms %}
-                                        <li>
-                                        <span{% if algorithm == 'RSA1_5' %} class="severity-high"{% elseif 'ECDH-ES' in algorithm %} class="severity-medium"{% endif %}>
-                                            {{ algorithm }}
-                                        </span>
-                                        </li>
-                                    {% endfor %}
-                                </ul>
-                            </td>
-                            <td>
-                                <ul>
-                                    {% for algorithm in data.content_encryption_algorithms %}
-                                        <li>{{ algorithm }}</li>
-                                    {% endfor %}
-                                </ul>
-                            </td>
-                            <td>
-                                <ul>
-                                    {% for method in data.compression_methods %}
-                                        <li>{{ method }}</li>
-                                    {% endfor %}
-                                </ul>
-                            </td>
-                        </tr>
-                    {% endfor %}
-                    </tbody>
-                </table>
-                <h4>JWE Decrypters</h4>
-                <table>
-                    <thead>
-                    <tr>
-                        <th>Service ID</th>
-                        <th>Key Encryption Algorithms</th>
-                        <th>Content Encryption Algorithms</th>
-                        <th>Compression Methods</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    {% for id, data in collector.get('jwe', 'getJWEDecrypters') %}
-                        <tr>
-                            <td>{{ id }}</td>
-                            <td>
-                                <ul>
-                                    {% for algorithm in data.key_encryption_algorithms %}
-                                        <li>
-                                        <span{% if algorithm == 'RSA1_5' %} class="severity-high"{% elseif 'ECDH-ES' in algorithm %} class="severity-medium"{% endif %}>
-                                            {{ algorithm }}
-                                        </span>
-                                        </li>
-                                    {% endfor %}
-                                </ul>
-                            </td>
-                            <td>
-                                <ul>
-                                    {% for algorithm in data.content_encryption_algorithms %}
-                                        <li>{{ algorithm }}</li>
-                                    {% endfor %}
-                                </ul>
-                            </td>
-                            <td>
-                                <ul>
-                                    {% for method in data.compression_methods %}
-                                        <li>{{ method }}</li>
-                                    {% endfor %}
-                                </ul>
-                            </td>
-                        </tr>
-                    {% endfor %}
-                    </tbody>
-                </table>
-                {% set keyEncryptionAlgorithms = collector.get('algorithm', 'getAlgorithmDetails') %}
-                {% if signatureAlgorithms['Key Encryption'] is defined %}
-                    <h4>Available Key Encryption Algorithms</h4>
-                    <ul>
-                        {% for alias, alg in keyEncryptionAlgorithms['Key Encryption'] %}
-                            <li><span{% if alg.name == 'RSA1_5' %} class="severity-high"{% elseif 'ECDH-ES' in alg.name %} class="severity-medium"{% endif %}>{{ alg.name }} (alias: <i>{{ alias }})</i>{% if alg.name == 'RSA1_5' %}. This algorithm is not secured (known attacks).{% elseif 'ECDH-ES' in alg.name %}. This algorithm is very slow when used with curves P-256, P-384, P-521.{% endif %}</span></li>
-                        {% endfor %}
-                    </ul>
-                    <h4>Available Content Encryption Algorithms</h4>
-                    <ul>
-                        {% for alias, alg in contentEncryptionAlgorithms['Content Encryption'] %}
-                            <li>{{ alg.name }} (alias: <i>{{ alias }})</i></li>
-                        {% endfor %}
-                    </ul>
-                    <h4>Compression Methods</h4>
-                    <ul>
-                        {% for alias, name in collector.get('jwe', 'getCompressionMethodDetails') %}
-                            <li>{{ name }} (alias: <i>{{ alias }})</i></li>
-                        {% endfor %}
-                    </ul>
-                    <h4>JWE Serialization Modes</h4>
-                    <ul>
-                        {% for alias, name in collector.get('jwe', 'getJWESerializationDetails') %}
-                            <li>{{ name }} (alias: <i>{{ alias }})</i></li>
-                        {% endfor %}
-                    </ul>
-                {% else %}
-                    The is no encryption algorithm. Did you installed "web-token/jwt-encryption-bundle"?
-                {% endif %}
-            </div>
-        </div>
-        <div class="tab">
-            <h3 class="tab-title">Checkers</h3>
-            <div class="tab-content">
-                <h4>Header Checkers</h4>
-                {% if collector.get('checker', 'getHeaderCheckers') is empty %}
-                    No header checker.
-                {% else %}
-                    <ul>
-                        {% for alias, data in collector.get('checker', 'getHeaderCheckers') %}
-                            <li>Alias: {{ alias }}, checked header: {{ data.claim }}{% if data.protected %} (protected header){% endif %}</li>
-                        {% endfor %}
-                    </ul>
-                {% endif %}
-                <h4>Header Checker Managers</h4>
-                {% if collector.get('checker', 'getHeaderCheckerManagers') is empty %}
-                    No header checker manager.
-                {% else %}
-                    <table>
-                        <thead>
-                        <tr>
-                            <th>Service ID</th>
-                            <th>Checked Headers</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        {% for id, data in collector.get('checker', 'getHeaderCheckerManagers') %}
-                            <tr>
-                                <td>{{ id }}</td>
-                                <td>
-                                    <ul>
-                                        {% for checker in data.getCheckers() %}
-                                            <li>{{ checker.supportedHeader() }}</li>
-                                        {% endfor %}
-                                    </ul>
-                                </td>
-                            </tr>
-                        {% endfor %}
-                        </tbody>
-                    </table>
-                {% endif %}
-                <h4>Claim Checkers</h4>
-                {% if collector.get('checker', 'getClaimCheckers') is empty %}
-                    No header checker.
-                {% else %}
-                    <ul>
-                        {% for alias, data in collector.get('checker', 'getClaimCheckers') %}
-                            <li>Alias: {{ alias }}, checked claim: {{ data.claim }}</li>
-                        {% endfor %}
-                    </ul>
-                {% endif %}
-            </div>
-        </div>
+        {% include 'tab/key.html.twig' %}
+        {% include 'tab/jws.html.twig' %}
+        {% include 'tab/jwe.html.twig' %}
+        {% include 'tab/checker.html.twig' %}
     </div>
 {% endblock %}
 
